--- a/index.html
+++ b/index.html
@@ -3,69 +3,119 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BuildCorp | Construction Company</title>
+    <title>UNiQUE Fire & Safety | Fire Protection Solutions</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+
     <!-- Navbar -->
     <header class="navbar">
-      <h1 class="logo">BuildCorp</h1>
+      <h1 class="logo">UNiQUE Fire & Safety</h1>
       <nav>
         <a href="#home">Home</a>
         <a href="#about">About</a>
         <a href="#services">Services</a>
+        <a href="#whyus">Why Us</a>
         <a href="#contact">Contact</a>
       </nav>
     </header>
 
-    <!-- Hero Section -->
-    <section id="home" class="section hero">
-      <div class="hero-grid">
-        <h2>Building Strong Foundations</h2>
-        <h2>for Tomorrow</h2>
+    <!-- Hero -->
+    <section id="home" class="hero">
+      <div class="hero-overlay">
+        <h2>Protecting Lives. Securing Futures.</h2>
         <p>
-          Reliable, safe, and high-quality construction services for your
-          residential, commercial. and industrial needs.
-          <br />
-          We bring your vision to life with precision.
+          Innovative fire protection solutions backed by 15+ years of industry
+          expertise.
         </p>
-        <!-- <button>Get a Quote</button> -->
+        <button class="primary-btn">Get a Consultation</button>
       </div>
     </section>
 
     <!-- About -->
     <section id="about" class="section">
-      <h2>About Us</h2>
-      <p>
-        We are a professional construction company delivering high-quality
-        residential and commercial projects with safety and precision.
+      <h2 class="section-title">About UNiQUE Fire & Safety</h2>
+      <p class="section-text">
+        UNiQUE Fire & Safety may be a new name in the fire fighting industry, but
+        our strength lies in our experienced team with over <strong>15 years of
+        proven expertise</strong>. We specialize in delivering reliable,
+        innovative, and customized fire safety solutions designed to protect
+        lives, property, and communities.
       </p>
     </section>
 
     <!-- Services -->
     <section id="services" class="section light">
-      <h2>Our Services</h2>
+      <h2 class="section-title">Our Services</h2>
       <div class="cards">
-        <div class="card">Residential Construction</div>
-        <div class="card">Commercial Buildings</div>
-        <div class="card">Renovation & Remodeling</div>
+        <div class="card">
+          <h3>Fire Prevention Systems</h3>
+          <p>
+            Design, installation, and maintenance of advanced fire prevention
+            and detection systems.
+          </p>
+        </div>
+        <div class="card">
+          <h3>Fire Safety Training</h3>
+          <p>
+            Professional training programs to prepare teams for emergency
+            situations.
+          </p>
+        </div>
+        <div class="card">
+          <h3>Emergency Response</h3>
+          <p>
+            Rapid and reliable emergency response solutions when every second
+            matters.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <!-- Why Us -->
+    <section id="whyus" class="section">
+      <h2 class="section-title">Why Choose UNiQUE Fire?</h2>
+      <div class="cards">
+        <div class="card">
+          <h3>15+ Years of Expertise</h3>
+          <p>
+            Our team brings decades of combined experience in fire safety and
+            protection.
+          </p>
+        </div>
+        <div class="card">
+          <h3>Certified Professionals</h3>
+          <p>
+            Highly trained and certified experts using industry best practices.
+          </p>
+        </div>
+        <div class="card">
+          <h3>Cutting-Edge Technology</h3>
+          <p>
+            Modern tools and innovative solutions ensuring maximum safety.
+          </p>
+        </div>
       </div>
     </section>
 
     <!-- Contact -->
-    <section id="contact" class="section">
-      <h2>Contact Us</h2>
+    <section id="contact" class="section light">
+      <h2 class="section-title">Contact Us</h2>
       <form class="contact-form">
-        <input type="text" placeholder="Your Name" required />
-        <input type="email" placeholder="Email" required />
-        <textarea placeholder="Your Message"></textarea>
-        <button type="submit">Send Message</button>
+        <input type="text" placeholder="Full Name" required />
+        <input type="email" placeholder="Email Address" required />
+        <textarea placeholder="Your Message" rows="4"></textarea>
+        <button type="submit" class="primary-btn">Send Message</button>
       </form>
     </section>
 
     <!-- Footer -->
     <footer>
-      <p>© 2025 BuildCorp. All Rights Reserved.</p>
+      <p>
+        © 2025 UNiQUE Fire & Safety. Building Safer Communities, One Solution at a
+        Time.
+      </p>
     </footer>
+
   </body>
 </html>
